# inframon

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  NOTICE.md  README.en.md  README.md  environment.yml  inframon.spec  inframon_app.bat  inframon_full.spec  pyproject.toml  모듈별_상세설계_InSAR_PINN_CV_FRAM.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: tests.yml
configs/: README.md
configs/demo/: bim_elements.json  bim_map_conversion.json
configs/jeongjagyo/: bim_control_points.example.json  bim_elements.json  bim_map_conversion.json  bridge_target.json  life_limits.json  selection_criteria.json  track_selection.json
docs/: BIM_정합.md  BIM_필요데이터.md  Bmaps_연동_인터페이스.md  F_SARvey_WSL2.md  KAIA_파이프라인.md  index.html  개발_맥락_맵.md  개발_워크플로우.md  데스크톱_앱.md  모듈별_상세설계_InSAR_PINN_CV_FRAM.md  시스템_개요.md  실데이터_런북.md  잔존수명_설계.md  전체_워크플로우.md  테스트_가이드.md  현재상황_관통_워크플로우.md
docs/맥락/: 00_공통_계약과_파이프라인.md  A_InSAR.md  B_PINN.md  CV.md  C_FRAM.md  README.md
examples/bmaps_tab/: InsarTab.jsx  README.md  VWorldInsarMap.jsx  inframon-client.js  insar-tab-vworld.html  insar-tab.html  vworld-adapter.js
packaging/: build_linux.sh  install.ps1  install_linux.sh  installer.nsi
scripts/: capture_dashboard.py  download_slc.py  make_demo_preview.py  make_readme_media.py
scripts/snap/: coreg_amp_tc.xml  coreg_ifg_tc.xml
scripts/wsl_sarvey/: 00_setup_env.sh  10_download.sh  20_stack_isce.sh  30_miaplpy.sh  40_sarvey.sh  45_atmo.sh  50_export_to_inframon.py  52_miaplpy_to_inframon.py  54_mintpy_to_inframon.py  56_stamps_to_inframon.py  58_sarvey_to_inframon.py  Dockerfile  _manifest.sh  run_all.sh
src/inframon/: __init__.py  __main__.py  _app_entry.py  bridge_info.py  config.py  custom_pinn.py  desktop.py  doctor.py  export.py  fem_crosscheck.py  geotransform.py  gnss_ngl.py  kg.py  pipeline_bridge.py  public_data.py  schedule.py  serve.py  structure.py  traffic.py  validation.py  vlm_package.py  weather.py
src/inframon/api/: __init__.py  app.py  registry.py  transform.py
src/inframon/bim/: __init__.py  align.py  elements.py  georef.py  ifc_io.py  psets.py
src/inframon/contracts/: array_schema.py  io.py  schema.py
src/inframon/cv/: engine.py  metrics.py  real_engine.py  synthetic.py
src/inframon/dashboard/: app.py  data.py  report.py
src/inframon/fram/: calibration.py  engine.py  network.py  real_engine.py  reference_range.py  reference_range_default.json  synthetic.py
src/inframon/insar/: atmo.py  availability.py  bim_export.py  bridge_conditions.py  bridge_meta.py  bridge_profile.py  (+25 more)
tests/: test_all_real_integration.py  test_atmo.py  test_availability.py  test_benchmark.py  test_bim_align.py  test_bim_export.py  test_bim_georef.py  test_bim_ifc_io.py  test_bim_ifc_roundtrip.py  test_bmaps_api.py  test_bridge_conditions.py  test_bridge_info.py  test_bridge_meta.py  test_cli.py  test_contract_validation.py  test_custom_pinn.py  test_cv_metrics.py  test_cv_real.py  test_dashboard_data.py  test_dashboard_data_root.py  test_deck_geometry.py  test_doctor.py  test_era5_master.py  test_export_csv.py  test_fem_crosscheck.py  test_fram_calibration.py  test_fram_condition.py  test_fram_grade.py  test_fram_morandi.py  test_fram_network.py  test_fram_real.py  test_fram_reference_range.py  test_fram_terrain.py  test_fram_warning.py  test_fuse_asc_desc_snap.py  test_gnss_ngl.py  test_golden_regression.py  test_incremental_resume.py  test_insar_dem.py  test_insar_fusion.py  (+39 more)
tests/golden/: demo_arrays.npz  demo_fingerprint.json
(+17 files in other folders)
