[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inframon"
version = "0.1.0"
description = "SARvey 기반 InSAR + PINN + FRAM 교량 인프라 모니터링 플랫폼"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "inframon contributors" }]
keywords = ["InSAR", "Sentinel-1", "bridge-monitoring", "PINN", "FRAM", "SARvey"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Physics",
]

# Phase 0 코어 의존성 (가벼움 — pip install -e . 만으로 데모 실행 가능)
dependencies = [
    "numpy>=1.26",
    "h5py>=3.10",
    "pydantic>=2.6",
]

[project.urls]
Homepage = "https://github.com/tjddnr8334-sudo/inframon"
Repository = "https://github.com/tjddnr8334-sudo/inframon"

[project.optional-dependencies]
# 모듈별 무거운 의존성은 Phase 1+ 에서 설치 (conda 권장)
# CV: 고전 백엔드(scipy/skimage) + Transformer 시맨틱 분할 백엔드(HF transformers, YOLO 미사용)
cv = ["scipy>=1.11", "scikit-image>=0.22", "imageio>=2.31", "pillow>=10",
      "transformers>=4.40", "timm>=0.9", "torch>=2.2"]
pinn = ["torch>=2.2"]
insar = ["mintpy", "rasterio>=1.3", "gdal"]
# SLC 검색·선별(C·D)만 — 가벼운 pip 패키지라 Windows 에서도 설치 가능(insar 본체와 분리)
search = ["asf_search>=7.0"]
dashboard = ["streamlit>=1.33", "plotly>=5.20", "folium>=0.16", "streamlit-folium>=0.20"]
# VLM 입력 패키지(--export-vlm) figures PNG 렌더 — --no-figures 면 불필요
report = ["matplotlib>=3.7"]
# FRAM 실시간 서빙(--serve) + 6측면 함수망 그래프
serve = ["fastapi>=0.110", "uvicorn>=0.29", "networkx>=3.2"]
# 모니터링 스케줄(--schedule)
schedule = ["prefect>=2.16"]
# BIM/디지털 트윈 — 실 IFC 읽기/쓰기(--bim-inspect·--bim-write-ifc). 정합 코어는 이것 없이도
# 동작한다(부재 테이블 JSON/CSV). pyproj 는 좌표 재투영용.
bim = ["ifcopenshell>=0.8", "pyproj>=3.6"]
dev = ["pytest>=8.0", "ruff>=0.4", "httpx>=0.27", "ifcopenshell>=0.8"]

[project.scripts]
inframon = "inframon.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
